if (BUILD_OSC_OPCODES)
    add_subdirectory(OSC)
endif()

if (BUILD_DSSI_OPCODES)
    add_subdirectory(dssi4cs)
endif()

if (BUILD_SCANSYN_OPCODES)
    add_subdirectory(scansyn)
endif()

if (BUILD_DEPRECATED_OPCODES)
    add_subdirectory(deprecated)
endif()

if (INIT_STATIC_MODULES OR BUILD_CPP_OPCODES)
    if (DIRENT_H)
        add_subdirectory(ftsamplebank)
    endif()
    add_subdirectory(ampmidid)
    add_subdirectory(doppler)
    add_subdirectory(fractalnoise)
    add_subdirectory(mixer)
    add_subdirectory(signalflowgraph)
endif()

if (BUILD_CPP_OPCODES)
    add_subdirectory(arrayops)
    add_subdirectory(bformdec2)
    add_subdirectory(lfsr)
    add_subdirectory(padsynth_gen)
    add_subdirectory(pvsops)
    add_subdirectory(trigEnvSegs)
endif()

if (UNIX)
    add_subdirectory(control)
    add_subdirectory(urandom)
endif()

if (LINUX)
    add_subdirectory(cpumeter)
    add_subdirectory(linuxjoystick)
endif()

add_subdirectory(afilters)
add_subdirectory(ambicode)
add_subdirectory(ambicode1)
add_subdirectory(arrays)
add_subdirectory(babo)
add_subdirectory(bbcut)
add_subdirectory(bilbar)
add_subdirectory(biquad)
add_subdirectory(buchla)
add_subdirectory(butter)
add_subdirectory(cellular)
add_subdirectory(clfilt)
add_subdirectory(compress)
add_subdirectory(counter)
add_subdirectory(cross2)
add_subdirectory(crossfm)
add_subdirectory(dam)
add_subdirectory(date)
add_subdirectory(dcblockr)
add_subdirectory(emugens)
add_subdirectory(entry1)
add_subdirectory(eqfil)
add_subdirectory(exciter)
add_subdirectory(fareyseq)
add_subdirectory(filter)
add_subdirectory(flanger)
add_subdirectory(follow)
add_subdirectory(fout)
add_subdirectory(framebuffer)
add_subdirectory(freeverb)
add_subdirectory(ftconv)
add_subdirectory(ftgen)
add_subdirectory(gab)
add_subdirectory(gammatone)
add_subdirectory(gendy)
add_subdirectory(grain)
add_subdirectory(grain4)
add_subdirectory(harmon)
add_subdirectory(hrtfearly)
add_subdirectory(hrtferX)
add_subdirectory(hrtfopcodes)
add_subdirectory(hrtfreverb)
add_subdirectory(hvs)
add_subdirectory(ifd)
add_subdirectory(liveconv)
add_subdirectory(locsig)
add_subdirectory(loscilx)
add_subdirectory(lowpassr)
add_subdirectory(lufs)
add_subdirectory(metro)
add_subdirectory(midiops2)
add_subdirectory(midiops3)
add_subdirectory(minmax)
add_subdirectory(modal4)
add_subdirectory(modmatrix)
add_subdirectory(mp3in)
add_subdirectory(newfils)
add_subdirectory(newgabopc)
add_subdirectory(nlfilt)
add_subdirectory(oscbnk)
add_subdirectory(pan2)
add_subdirectory(partials)
add_subdirectory(partikkel)
add_subdirectory(paulstretch)
add_subdirectory(phisem)
add_subdirectory(physmod)
add_subdirectory(pinker)
add_subdirectory(pitchtrack)
add_subdirectory(platerev)
add_subdirectory(pluck)
add_subdirectory(psynth)
add_subdirectory(pvlock)
add_subdirectory(pvoc)
add_subdirectory(pvsband)
add_subdirectory(pvsbasic)
add_subdirectory(pvsbuffer)
add_subdirectory(pvscent)
add_subdirectory(pvsdemix)
add_subdirectory(pvsgendy)
add_subdirectory(repluck)
add_subdirectory(reverbsc)
add_subdirectory(sc_noise)
add_subdirectory(scanhammer)
add_subdirectory(scansynx)
add_subdirectory(scoreline)
add_subdirectory(scugens)
add_subdirectory(select)
add_subdirectory(seqtime)
add_subdirectory(sequencer)
add_subdirectory(serial)
add_subdirectory(sfont)
add_subdirectory(shape)
add_subdirectory(sliderTable)
add_subdirectory(sndloop)
add_subdirectory(sndwarp)
add_subdirectory(sockrecv)
add_subdirectory(socksend)
add_subdirectory(space)
add_subdirectory(spat3d)
add_subdirectory(spectra)
add_subdirectory(squinewave)
add_subdirectory(sterrain)
add_subdirectory(syncgrain)
add_subdirectory(system_call)
add_subdirectory(tabaudio)
add_subdirectory(tabmorph)
add_subdirectory(tabsum)
add_subdirectory(ugakbari)
add_subdirectory(ugens7)
add_subdirectory(ugens9)
add_subdirectory(ugensa)
add_subdirectory(uggab)
add_subdirectory(ugmoss)
add_subdirectory(ugnorman)
add_subdirectory(ugsc)
add_subdirectory(vaops)
add_subdirectory(vbap)
add_subdirectory(vectorial)
add_subdirectory(vosim)
add_subdirectory(wave-terrain)
add_subdirectory(wpfilters)
add_subdirectory(wterrain2)
add_subdirectory(zak)
