if (BUILD_UTILITIES)
    add_subdirectory(atsa)
    add_subdirectory(csbeats)
    add_subdirectory(cvanal)
    add_subdirectory(dnoise)
    add_subdirectory(envext)
    add_subdirectory(extractor)
    add_subdirectory(het_export)
    add_subdirectory(het_import)
    add_subdirectory(hetro)
    add_subdirectory(lpanal)
    add_subdirectory(lpc_export)
    add_subdirectory(lpc_import)
    add_subdirectory(mixer_bin)
    add_subdirectory(pvanal)
    add_subdirectory(pvlook)
    add_subdirectory(pv_export)
    add_subdirectory(pv_import)
    add_subdirectory(scale)
    add_subdirectory(sdif2ad)
    add_subdirectory(sndinfo)
    add_subdirectory(srconv)
    if (BUILD_SRC_CONV)
        add_subdirectory(src_conv)
    endif()
    if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_CLANG OR MSVC)
        add_subdirectory(csb64enc)
        add_subdirectory(makecsd)
    endif()
endif()
